[package]
name = "wled_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
image = "0.24.5"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
tokio = { version = "1.24.1", features = ["full"] }
