[package]
author = "https://github.com/deepchris"
name = "wled_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
futures = "0.3.25"
http = "0.2.8"
image = "0.24.5"
mime = "0.3.16"
reqwest = { version = "0.11.13", features = ["blocking", "json", "multipart"] }
tokio = { version = "1.24.1", features = ["full"] }
